fix:page summary Height setting button overlap

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -93,6 +93,7 @@ $font-size-small: 12px;
       line-height: 1.4;
       font-size: 12px;
       letter-spacing: normal !important;
+      overflow: hidden auto;
 
       h5,
       h6 {
